# Socket-Programming-C

./: CMakeLists.txt  Makefile  README.md
clients/: client.c
clients/1/: a.txt
clients/2/: b.txt
clients/3/: c.txt
include/: utils.h
server/: server.c
src/: client.c  server.c  utils.c
